# RPIPicoWWSCourse

./: .gitmodules  README.md
lib/RPIPicoWWSClient-RTOS/: CMakeLists.txt  README.md
lib/RPIPicoWWSClient-RTOS/demo/: CMakeLists.txt  main.cpp
lib/RPIPicoWWSClient-RTOS/src/: Request.cpp  Request.h  TCPTransport.h  TLSTransBlock.cpp  TLSTransBlock.h
lib/RPIPicoWWSClient-RTOS/test/: CMakeLists.txt  http.cpp  https.cpp  test_main.cpp
sec-10-examples/Rates/: CMakeLists.txt  galactic_unicorn.cmake
sec-10-examples/Rates/py/: rates.py  tlsVer.py
sec-10-examples/Rates/src/: CMakeLists.txt  Digits.cpp  Digits.h  Digits6x11.cpp  Digits6x11.h  PicoGraphics_ExtRGB888.cpp  PicoGraphics_ExtRGB888.h  Rates.cpp  Rates.h  localPicoGraphics.h  main.cpp
sec-10-examples/Weather/: CMakeLists.txt
sec-10-examples/YouTube/: CMakeLists.txt
sec-2-FirstService/IPGeolocation/: CMakeLists.txt
sec-2-FirstService/Wifi-Connect/: CMakeLists.txt
sec-2-FirstService/py/: ipgeo.py  tlsVer.py
sec-3-py/py-get/: client-temp-get.py  client-time.py  client-user.py
sec-3-py/py-post/: client-json-post.py  client-temp-post.py  client-user.py
sec-3-py/py-server/: first-server.py  full-server.py
sec-4-URI/AssignURILib/: CMakeLists.txt
sec-4-URI/AssignURIParser/: CMakeLists.txt
sec-4-URI/TestURILib/: CMakeLists.txt
sec-4-URI/TestURIParser/: CMakeLists.txt  uriparser.cmake
sec-5-lwip/AnswerLwipRequest/: lwip_import.cmake
sec-5-lwip/RequestQuery/: CMakeLists.txt
sec-5-lwip/TempClient/: CMakeLists.txt
sec-5-lwip/lwipClient/: CMakeLists.txt
sec-6-JSON/AssignCoreJSON/: CMakeLists.txt
sec-6-JSON/AssignTinyJSON/: CMakeLists.txt
sec-6-JSON/TestCoreJSON/: CMakeLists.txt  coreJSON.cmake
sec-6-JSON/TestTinyJSON/: CMakeLists.txt
sec-7-coreHTTP/AssignTempSensor/: CMakeLists.txt
sec-7-coreHTTP/HTTPGet/: CMakeLists.txt
sec-7-coreHTTP/HTTPPost/: CMakeLists.txt
sec-7-coreHTTP/Socket/: CMakeLists.txt
sec-8-security/AssignIPGeo/: CMakeLists.txt
sec-8-security/BasicAuth/: CMakeLists.txt
sec-8-security/TLSGET/: CMakeLists.txt
sec-8-security/TLSRequest/: CMakeLists.txt
sec-8-security/py/: client-time.py  server.py
sec-9-xml/TestMXML/: CMakeLists.txt  mxml.cmake
sec-9-xml/TestMinML/: CMakeLists.txt  miniML.cmake
(+88 files in other folders)
